--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 <head>
   <title>Sample Google icons fonts</title>
-  <link rel="stylesheet" href="./css/icon-fonts.css" />
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+	<link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/icon-fonts.css" />
 </head>
 
 <body>
@@ -10,5 +14,65 @@
   <p>
   	This is a simple project for me to test CSS layouts, and to incorporate Gooles icon font. I want to use them in Header sections. 
   </p>
+
+
+<h3>Stats</h3>
+<p>Some interesting help above from;
+<a href="http://www.w3schools.com/icons/">w3schools.com/icons</a>. But there you have to insert html code into your page. Not our best solution.
+</p>
+<p>What I really want is to add an icon before WORDS on a page just using the power of CSS3. Remember in the old days, we had to use javascript to do so many things that CSS3 has now taken over. So lets explore some more of that power.
+<a href="http://chipcullen.com/using-icons-from-icon-fonts-directly-in-css/">Lets use fonts via CSS</a>.
+</p>
+<h3 id="stats" class="stats-title">Stats</h3>
+
+<div class="nut-phone">
+	<span class="touch"><a title="Call Nuttify" href="tel:4045551212">404-555-1212</a></span>
+</div>
+<p>Awesome images make champion websites.  They are important to getting people engaged with your website content. As the old saying goes:
+<blockquote>An image tells a thousand words</blockquote>
+So if you are searching the web for good quality images and want to add a little <a title="Salsa Picante on Wikipedia" href="http://en.wikipedia.org/wiki/Hot_sauce" target="_blank">salsa picante</a> to your blog post, then this help article is for you.</p>
+<p>
+<a href="http://nuttify.com/help/developer-manual/coding-style-guide/css-style-guide/css-tricks-before-pseudo-element-with-fontawesome/">:before</a> seemed to work best for me. Now to go apply it to a best testing page than this. </p>
+<hr>
+<h2>Some Font Awesome icons:</h2>
+	<i class="fa fa-cloud"></i>
+	<i class="fa fa-heart"></i>
+	<i class="fa fa-car"></i>
+	<i class="fa fa-file"></i>
+	<i class="fa fa-bars"></i>
+		<br><br>
+	<p>Styled Font Awesome icons (size, color, and shadow):</p>
+	<i class="fa fa-cloud" style="font-size:24px;"></i>
+	<i class="fa fa-cloud" style="font-size:36px;"></i>
+	<i class="fa fa-cloud" style="font-size:48px;color:red;"></i>
+	<i class="fa fa-cloud" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+<hr>
+<h2>Some Bootstrap icons:</h2>
+	<i class="glyphicon glyphicon-cloud"></i>
+	<i class="glyphicon glyphicon-remove"></i>
+	<i class="glyphicon glyphicon-user"></i>
+	<i class="glyphicon glyphicon-envelope"></i>
+	<i class="glyphicon glyphicon-thumbs-up"></i>
+		<br><br>
+	<p>Styled Bootstrap icons (size, color, and shadow):</p>
+	<i class="glyphicon glyphicon-cloud" style="font-size:24px;"></i>
+	<i class="glyphicon glyphicon-cloud" style="font-size:36px;"></i>
+	<i class="glyphicon glyphicon-cloud" style="font-size:48px;color:red;"></i>
+	<i class="glyphicon glyphicon-cloud" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;"></i>
+<hr>
+<h2>Some Google icons:</h2>
+	<i class="material-icons">cloud</i>
+	<i class="material-icons">favorite</i>
+	<i class="material-icons">attachment</i>
+	<i class="material-icons">computer</i>
+	<i class="material-icons">traffic</i>
+		<br><br>
+	<p>Styled Google icons (size, color, and shadow):</p>
+	<i class="material-icons" style="font-size:24px;">cloud</i>
+	<i class="material-icons" style="font-size:36px;">cloud</i>
+	<i class="material-icons" style="font-size:48px;color:red;">cloud</i>
+	<i class="material-icons" style="font-size:60px;color:lightblue;text-shadow:2px 2px 4px #000000;">cloud</i>
+<hr>
+
 </body>
 </html>
